--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -5,17 +5,17 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
       <th>Score</th>
-      <th colspan="3"></th>
+      <th>Name</th>
+      <th></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @results.each do |result| %>
+    <% @top_results.each do |result| %>
       <tr>
-        <td><%= result.name %></td>
         <td><%= result.score %></td>
+        <td><%= result.name %></td>
         <td><%= link_to 'Show', result %></td>
         <td><%= link_to 'Edit', edit_result_path(result) %></td>
         <td><%= link_to 'Destroy', result, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -24,6 +24,26 @@
   </tbody>
 </table>
 
-<br>
+<table>
+  <thead>
+    <tr>
+      <th>Score</th>
+      <th>Name</th>
+      <th></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @results.reverse_each do |result| %>
+      <tr>
+        <td><%= result.score %></td>
+        <td><%= result.name %></td>
+        <td><%= link_to 'Show', result %></td>
+        <td><%= link_to 'Edit', edit_result_path(result) %></td>
+        <td><%= link_to 'Destroy', result, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
 <%= link_to 'New Result', new_result_path %>
