--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -16,9 +16,10 @@
       <tr>
         <td><%= result.score %></td>
         <td><%= result.name %></td>
-        <td><%= link_to 'Show', result %></td>
-        <td><%= link_to 'Edit', edit_result_path(result) %></td>
-        <td><%= link_to 'Destroy', result, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to 'Edit', edit_result_path(result) %>
+          <%= link_to 'Destroy', result, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -38,9 +39,10 @@
       <tr>
         <td><%= result.score %></td>
         <td><%= result.name %></td>
-        <td><%= link_to 'Show', result %></td>
-        <td><%= link_to 'Edit', edit_result_path(result) %></td>
-        <td><%= link_to 'Destroy', result, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to 'Edit', edit_result_path(result) %>
+          <%= link_to 'Destroy', result, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
