--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Score</th>
       <th>Name</th>
+      <th>Adult</th>
       <th></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= result.score %></td>
         <td><%= result.name %></td>
+        <td><%= result.adult %></td>
         <td>
           <%= link_to 'Edit', edit_result_path(result) %>
           <%= link_to 'Destroy', result, method: :delete, data: { confirm: 'Are you sure?' } %>
@@ -30,6 +32,7 @@
     <tr>
       <th>Score</th>
       <th>Name</th>
+      <th>Adult</th>
       <th></th>
     </tr>
   </thead>
@@ -39,6 +42,7 @@
       <tr>
         <td><%= result.score %></td>
         <td><%= result.name %></td>
+        <td><%= result.adult %></td>
         <td>
           <%= link_to 'Edit', edit_result_path(result) %>
           <%= link_to 'Destroy', result, method: :delete, data: { confirm: 'Are you sure?' } %>
