Display today and yesterday top results

--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -13,7 +13,32 @@
   </thead>
 
   <tbody>
-    <% @top_results.each do |result| %>
+    <% @today_top_results.each do |result| %>
+      <tr>
+        <td><%= result.score %></td>
+        <td><%= result.name %></td>
+        <td><%= result.adult %></td>
+        <td>
+          <%= link_to 'Edit', edit_result_path(result) %>
+          <%= link_to 'Destroy', result, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<table>
+  <thead>
+    <tr>
+      <th>Score</th>
+      <th>Name</th>
+      <th>Adult</th>
+      <th></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @yesterday_top_results.each do |result| %>
       <tr>
         <td><%= result.score %></td>
         <td><%= result.name %></td>
