--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,5 +13,13 @@
 
   <%= yield %>
 
+  <footer class="footer">
+    <% if user_signed_in? %> 
+      Logged in as <%= current_user.email %>.
+      <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to "ログイン", new_user_session_path %>
+    <% end %>
+  </footer>
 </body>
 </html>
