--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -68,3 +68,6 @@ $icon-font-path: "bootstrap-sass-official/";
 // Utility classes
 @import "bootstrap-sass-official/bootstrap/utilities";
 @import "bootstrap-sass-official/bootstrap/responsive-utilities";
+
+// Original files
+@import "initialize"
