--- a/app/assets/stylesheets/_initialize.scss
+++ b/app/assets/stylesheets/_initialize.scss
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: mplus-2p-black;
+  src: url('mplus-2p-black.ttf')
+  format('truetype')
+}
+
 html,
 body {
   @media screen and (max-width: 768px) {
@@ -6,4 +12,5 @@ body {
   background-image: url('logo-bg-pc.png');
   background-size: 100% auto;
   background-repeat: no-repeat;
+  font-family: mplus-2p-black;
 }
