Regulate index page styles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,4 +70,5 @@ $icon-font-path: "bootstrap-sass-official/";
 @import "bootstrap-sass-official/bootstrap/responsive-utilities";
 
 // Original files
-@import "initialize"
+@import "initialize";
+@import "index";
