--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,11 @@
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
-  <%= yield %>
+  <main>
+    <div class="container">
+      <%= yield %>
+    </div>
+  </main>
 
   <footer class="footer">
     <% if user_signed_in? %> 
