Regulate footer styles

--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -1,5 +1,3 @@
-$gray: #ccc;
-
 .ranking-table {
   font-size: 24px;
   margin: auto;
@@ -9,5 +7,5 @@ $gray: #ccc;
 
 hr {
   border-top-width: 4px;
-  color: $gray;
+  color: #ccc;
 }
