Define default color #333

--- a/app/assets/stylesheets/_initialize.scss
+++ b/app/assets/stylesheets/_initialize.scss
@@ -12,6 +12,7 @@ body {
   background-image: url('logo-bg-pc.png');
   background-size: 100% auto;
   background-repeat: no-repeat;
+  color: #333;
   font-family: mplus-2p-black;
 }
 
