--- a/app/views/results/_form.html.erb
+++ b/app/views/results/_form.html.erb
@@ -24,6 +24,6 @@
     <%= f.radio_button :adult, false %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "記録する" %>
   </div>
 <% end %>
