--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,6 +69,8 @@ $icon-font-path: "bootstrap-sass-official/";
 @import "bootstrap-sass-official/bootstrap/utilities";
 @import "bootstrap-sass-official/bootstrap/responsive-utilities";
 
+@import "toggle-switch";
+
 // Original files
 @import "initialize";
 @import "index";
