Add style for .btn-green

--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -1,4 +1,9 @@
 .btn-orange {
-  background-color: #ea7b1f; 
+  background-color: #ea7b1f;
+  color: #ffffff;
+}
+
+.btn-green {
+  background-color: #9ec60a;
   color: #ffffff;
 }
