フッターの固定とサイズ変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  
 </head>
 <body>
 
@@ -31,12 +32,14 @@
     </div>
   </main>
 
-  <footer class="footer">
+  <footer class="footer" id="footer">
+  <FONT size="2">
     <% if user_signed_in? %> 
       Logged in as <%= current_user.email %>.
       <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
     <% else %>
       <%= link_to "ログイン", new_user_session_path %>
+      </FONT> 
     <% end %>
   </footer>
 </body>
