Regulate switch styles

--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -7,3 +7,10 @@
   background-color: #9ec60a;
   color: #ffffff;
 }
+
+.switch-light.well {
+  margin: 20px 0;
+  height: 34px;
+
+  span { line-height: 34px; }
+}
