Use CSS instead of JS to fix footer

--- a/app/assets/stylesheets/_initialize.scss
+++ b/app/assets/stylesheets/_initialize.scss
@@ -24,6 +24,11 @@ main {
   color: #ccc;
   font-size: 13px;
   text-align: center;
+  margin-bottom: 10px;
+  width: 100%;
+
+  bottom: 0;
+  position: fixed;
 
   a { color: #ccc; }
 }
