--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
     </div>
   </main>
 
-  <footer class="footer" id="footer">
+  <footer class="footer">
     <% if user_signed_in? %> 
       Logged in as <%= current_user.email %>.
       <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
