--- a/app/assets/stylesheets/_initialize.scss
+++ b/app/assets/stylesheets/_initialize.scss
@@ -1,9 +1,3 @@
-@font-face {
-  font-family: mplus-2p-black;
-  src: url('mplus-2p-black.ttf')
-  format('truetype')
-}
-
 html,
 body {
   @media screen and (max-width: 768px) {
@@ -13,7 +7,9 @@ body {
   background-size: 100% auto;
   background-repeat: no-repeat;
   color: #333;
-  font-family: mplus-2p-black;
+
+  font-family: Verdana, Roboto, "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "Droid Sans", "游ゴシック", YuGothic, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", sans-serif;
+  font-weight: 700;
 }
 
 main {
