区切り線の調整

--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -1,39 +1,40 @@
-<div class="ranking-index">
-  <div class="row">
-    <div class="col-md-6">
-      <h2 class="text-center">おとな</h2>
-      <table class="ranking-table">
-        <tbody>
-          <% @today_adult_top_results.each do |result| %>
-            <tr>
-              <td>
-                <%= link_to result.name, edit_result_path(result) %>
-              </td>
-              <td><%= result.score %>pt</td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
+<hr class="today">
 
-    <div class="col-md-6">
-      <h2 class="text-center">こども</h2>
-      <table class="ranking-table">
-        <tbody>
-          <% @today_child_top_results.each do |result| %>
-            <tr>
-              <td>
-                <%= link_to result.name, edit_result_path(result) %>
-              </td>
-              <td><%= result.score %>pt</td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
+<div class="row">
+  <div class="col-md-6">
+    <h2 class="text-center">おとな</h2>
+    <table class="ranking-table">
+      <tbody>
+        <% @today_adult_top_results.each do |result| %>
+          <tr>
+            <td>
+              <%= link_to result.name, edit_result_path(result) %>
+            </td>
+            <td><%= result.score %>pt</td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
 
-  <hr>
+  <div class="col-md-6">
+    <h2 class="text-center">こども</h2>
+    <table class="ranking-table">
+      <tbody>
+        <% @today_child_top_results.each do |result| %>
+          <tr>
+            <td>
+              <%= link_to result.name, edit_result_path(result) %>
+            </td>
+            <td><%= result.score %>pt</td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<hr class="yesterday">
 
   <div class="row">
     <div class="col-md-6">
