Auto reload results#index

--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -76,3 +76,6 @@
 </div>
 </br>
 
+<p class="reload-notice">30秒ごとにリロードします</p>
+
+<%= javascript_include_tag 'reload', 'data-turbolinks-track' => true %>
