Fix rebase miss

--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -1,40 +1,41 @@
-<hr class="today">
+<div class="ranking-index">
+  <hr class="today">
 
-<div class="row">
-  <div class="col-md-6">
-    <h2 class="text-center">おとな</h2>
-    <table class="ranking-table">
-      <tbody>
-        <% @today_adult_top_results.each do |result| %>
-          <tr>
-            <td>
-              <%= link_to result.name, edit_result_path(result) %>
-            </td>
-            <td><%= result.score %>pt</td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
+  <div class="row">
+    <div class="col-md-6">
+      <h2 class="text-center">おとな</h2>
+      <table class="ranking-table">
+        <tbody>
+          <% @today_adult_top_results.each do |result| %>
+            <tr>
+              <td>
+                <%= link_to result.name, edit_result_path(result) %>
+              </td>
+              <td><%= result.score %>pt</td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="col-md-6">
+      <h2 class="text-center">こども</h2>
+      <table class="ranking-table">
+        <tbody>
+          <% @today_child_top_results.each do |result| %>
+            <tr>
+              <td>
+                <%= link_to result.name, edit_result_path(result) %>
+              </td>
+              <td><%= result.score %>pt</td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
 
-  <div class="col-md-6">
-    <h2 class="text-center">こども</h2>
-    <table class="ranking-table">
-      <tbody>
-        <% @today_child_top_results.each do |result| %>
-          <tr>
-            <td>
-              <%= link_to result.name, edit_result_path(result) %>
-            </td>
-            <td><%= result.score %>pt</td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-</div>
-
-<hr class="yesterday">
+  <hr class="yesterday">
 
   <div class="row">
     <div class="col-md-6">
@@ -75,6 +76,7 @@
   </div>
 </div>
 </br>
+</div>
 
 <p class="reload-notice">30秒ごとにリロードします</p>
 
