--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -1,7 +1,7 @@
 .ranking-index {
   @font-face {
     font-family: mplus-2p-black;
-    src: url('mplus-2p-black.ttf')
+    src: url('../fonts/mplus-2p-black.ttf')
     format('truetype')
   }
 
