--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -1,10 +1,9 @@
-.ranking-index {
-  @font-face {
-    font-family: mplus-2p-black;
-    src: url('../fonts/mplus-2p-black.ttf')
-    format('truetype')
-  }
+@font-face {
+  font-family: mplus-2p-black;
+  src: url('mplus-2p-black.ttf') format('truetype');
+}
 
+.ranking-index {
   font-family: mplus-2p-black;
 }
 
