Fix result-table width

--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -2,7 +2,7 @@
   <hr class="today">
 
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-sm-6">
       <h2 class="text-center">おとな</h2>
       <table class="ranking-table">
         <tbody>
@@ -18,7 +18,7 @@
       </table>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-sm-6">
       <h2 class="text-center">こども</h2>
       <table class="ranking-table">
         <tbody>
@@ -38,7 +38,7 @@
   <hr class="yesterday">
 
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-sm-6">
       <% if @yesterday_adult_top_results.present? %>
         <h2 class="text-center">おとな</h2>
         <table class="ranking-table">
@@ -56,7 +56,7 @@
       <% end %>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-sm-6">
       <% if @yesterday_child_top_results.present? %>
         <h2 class="text-center">こども</h2>
         <table class="ranking-table">
