--- a/app/views/results/all.html.erb
+++ b/app/views/results/all.html.erb
@@ -1,4 +1,6 @@
 <table class="table all-results-table">
+  <h2 class="text-center">全記録の一覧</h2>
+
   <% @results.each do |result| %>
     <tr>
       <td><%= link_to result.name, edit_result_url(result) %></td>
