--- a/app/views/results/new.html.erb
+++ b/app/views/results/new.html.erb
@@ -1,2 +1,9 @@
 <%= render 'form' %>
 
+<div class="well links">
+  <p>
+    <%= link_to '記録一覧', results_all_url %>→記録をクリック<br>
+    で、間違えて入力した時は修正・削除できます。
+  </p>
+  <p>不具合・バグがあればやましーまで連絡ください。対応します。</p>
+</div>
