--- a/app/views/results/edit.html.erb
+++ b/app/views/results/edit.html.erb
@@ -1,5 +1,9 @@
-<h1>Editing Result</h1>
+<h2 class="text-center">記録を編集する</h2>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', results_path %>
+<div class="row">
+  <div class="actions col-xs-12">
+    <%= link_to '削除する', result_url, method: :delete, data: { confirm: '本当に削除しますか？' }, class: "btn btn-danger btn-lg btn-block" %>
+  </div>
+</div>
