Display challengers count

--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -1,4 +1,5 @@
 <div class="ranking-index">
+  <h2 class="text-center"><%= @challengers %> challengers</h2>
   <hr class="today">
 
   <div class="row">
